creati bottoni e dato stile e sfocatura

--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -208,6 +208,35 @@
           <p><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
         </div>
       </aside>
+      <div id="buttons">
+        <div class="btnsTop">
+          <div id="plus" class="btn">
+            <img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/nolan/64/1A6DFF/C822FF/plus-math.png"
+              alt="plus-math"
+            />
+          </div>
+          <div id="calendar" class="btn">
+            <img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/nolan/64/1A6DFF/C822FF/tear-off-calendar.png"
+              alt="tear-off-calendar"
+            />
+          </div>
+        </div>
+        <div id="backTop" class="btn">
+          <a href="#"
+            ><img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/nolan/64/collapse-arrow.png"
+              alt="collapse-arrow"
+          /></a>
+        </div>
+      </div>
     </main>
 
     <hr />
